Make it use multiple SO tags

--- a/serverless.yml
+++ b/serverless.yml
@@ -65,7 +65,7 @@ functions:
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
     events:
-      - schedule: rate(1 minute)
+      - schedule: rate(10 minutes)
 
 # you can add CloudFormation resource templates here
 resources:
