Include better debugging, rebuild the data object and some ENV customisation

--- a/serverless.yml
+++ b/serverless.yml
@@ -84,11 +84,11 @@ resources:
       Properties:
         AttributeDefinitions:
           -
-            AttributeName: "link"
+            AttributeName: "answerLink"
             AttributeType: "S"
         KeySchema:
           -
-            AttributeName: "link"
+            AttributeName: "answerLink"
             KeyType: "HASH"
         ProvisionedThroughput:
           ReadCapacityUnits: 1
