--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
   },
   "homepage": "https://github.com/ukmadlz/ingest-stackoverflow#readme",
   "dependencies": {
-    "aws-sdk": "^2.643.0",
+    "aws-sdk": "^2.648.0",
     "axios": "^0.19.2",
+    "debug": "^4.1.1",
     "logzio-nodejs": "^2.0.0",
     "rss-parser": "^3.7.6"
   },
   "devDependencies": {
     "serverless": "^1.67.0",
     "serverless-dynamodb-local": "^0.2.39",
-    "serverless-offline": "^6.0.0"
+    "serverless-offline": "^6.1.2"
   }
 }
